--- a/BottomsUp/BottomsUp.Web/packages.config
+++ b/BottomsUp/BottomsUp.Web/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.2" targetFramework="net45" />
+  <package id="BundleTransformer.Core" version="1.9.34" targetFramework="net45" />
+  <package id="BundleTransformer.SassAndScss" version="1.9.34" targetFramework="net45" />
   <package id="Holder.js" version="2.5.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
