--- a/BottomsUp/packages/repositories.config
+++ b/BottomsUp/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\BottomsUp.Console\packages.config" />
+  <repository path="..\BottomsUp.Core.Tests\packages.config" />
   <repository path="..\BottomsUp.Core\packages.config" />
   <repository path="..\BottomsUp.Web\packages.config" />
 </repositories>
