--- a/BottomsUp/BottomsUp.Web/packages.config
+++ b/BottomsUp/BottomsUp.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="BundleTransformer.SassAndScss" version="1.9.34" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.2" targetFramework="net45" />
+  <package id="Handlebars.js" version="2.0.0.0" targetFramework="net45" />
   <package id="Holder.js" version="2.5.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
@@ -33,6 +34,7 @@
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net45" />
+  <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
