--- a/BottomsUp/BottomsUp.Web/packages.config
+++ b/BottomsUp/BottomsUp.Web/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngularJS.Core" version="1.3.8" targetFramework="net45" />
+  <package id="AngularJS.Resource" version="1.3.8" targetFramework="net45" />
+  <package id="AngularJS.Route" version="1.3.8" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="bootstrap" version="3.3.2" targetFramework="net45" />
@@ -37,6 +39,7 @@
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net45" />
   <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="toastr" version="2.1.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
