--- a/BottomsUp/BottomsUp.Web.Tests/BottomsUp.Web.Tests.csproj
+++ b/BottomsUp/BottomsUp.Web.Tests/BottomsUp.Web.Tests.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RequirementsControllerTests.cs" />
     <Compile Include="ProposalControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
