--- a/BottomsUp/BottomsUp.Web/BottomsUp.Web.csproj
+++ b/BottomsUp/BottomsUp.Web/BottomsUp.Web.csproj
@@ -198,6 +198,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\proposals\details.html" />
+    <Content Include="app\proposals\index.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -206,8 +208,11 @@
     <Content Include="Content\slidebars.css" />
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
+    <Content Include="Content\ui-grid-unstable.css" />
+    <Content Include="Content\ui-grid-unstable.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\ui-grid.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -215,19 +220,17 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
-    <Content Include="HtmlPage1.html" />
-    <Content Include="js\controllers\proposals\proposalControllers.js" />
-    <Content Include="js\controllers\shared\navigationMenuController.js" />
-    <Content Include="js\controllers\tasks\taskViewController.js" />
-    <Content Include="js\router.js" />
-    <Content Include="js\services\dataServices.js" />
-    <Content Include="js\views\proposals\details.html" />
-    <Content Include="js\views\proposals\index.html" />
+    <Content Include="app\proposals\proposalControllers.js" />
+    <Content Include="app\layout\navigationMenuController.js" />
+    <Content Include="app\router.js" />
+    <Content Include="app\services\dataServices.js" />
     <Content Include="Scripts\angular-mocks.js" />
     <Content Include="Scripts\angular-resource.js" />
     <Content Include="Scripts\angular-resource.min.js" />
     <Content Include="Scripts\angular-route.js" />
     <Content Include="Scripts\angular-route.min.js" />
+    <Content Include="Scripts\angular-ui-router.js" />
+    <Content Include="Scripts\angular-ui-router.min.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -238,6 +241,8 @@
     <Content Include="Content\bottomsup.scss" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
+    <Content Include="Scripts\ui-grid-unstable.js" />
+    <Content Include="Scripts\ui-grid-unstable.min.js" />
     <Content Include="themes\AdminLTE-2.0.4\.gitignore" />
     <Content Include="themes\AdminLTE-2.0.4\bootstrap\css\bootstrap.css" />
     <Content Include="themes\AdminLTE-2.0.4\bootstrap\css\bootstrap.min.css" />
@@ -933,6 +938,9 @@
     <Content Include="themes\AdminLTE-2.0.4\plugins\input-mask\phone-codes\phone-be.json" />
     <Content Include="themes\AdminLTE-2.0.4\plugins\input-mask\phone-codes\phone-codes.json" />
     <Content Include="themes\AdminLTE-2.0.4\README.md" />
+    <Content Include="fonts\ui-grid.woff" />
+    <Content Include="fonts\ui-grid.ttf" />
+    <Content Include="fonts\ui-grid.eot" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -987,6 +995,7 @@
     <None Include="_bin_deployableAssemblies\x86\Microsoft.VC90.CRT\Microsoft.VC90.CRT.manifest" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="app\common\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
