--- a/BottomsUp/BottomsUp.Web/packages.config
+++ b/BottomsUp/BottomsUp.Web/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.UI-Router" version="0.2.13" targetFramework="net45" />
   <package id="AngularJS.Core" version="1.3.8" targetFramework="net45" />
   <package id="AngularJS.Resource" version="1.3.8" targetFramework="net45" />
   <package id="AngularJS.Route" version="1.3.8" targetFramework="net45" />
+  <package id="angular-ui-grid" version="3.0.0" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.2" targetFramework="net45" />
   <package id="BundleTransformer.Core" version="1.9.34" targetFramework="net45" />
